changed the font style

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* @format */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 :root{
     --dark-blue1: hsl(217, 28%, 15%);
     --dark-blue2: hsl(218, 28%, 13%);
@@ -7,19 +11,30 @@
     --Blue : hsl(198, 60%, 50%);
     --Light-Red : hsl(0, 100%, 63%);
     --White: hsl(0, 0%, 100%);
-
 }
+
 *{
     padding: 0%;
     margin: 0%;
 }
+
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+}
+
 body{
     background-color: var(--dark-blue1);
+    font-family: 'Open Sans', sans-serif;
+
 }
 
 nav a{
     color: var(--White);
     text-decoration: none;
+    font-weight: 400;
+    font-family: 'Raleway', sans-serif;;
 }
 
 nav{
